--- a/prueba.html
+++ b/prueba.html
@@ -5,6 +5,70 @@
         <title>  mi primera página</title>
     </head>
     <body>
+
+        <!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejemplos de Selectores CSS</title>
+    <style>
+        /* Color del texto */
+        p {
+            color: rgb(212, 182, 182);
+            /* Cambia el color del texto a azul */
+        }
+
+        /* Color de fondo */
+        div {
+            background-color: rgb(239, 243, 12);
+            /* Establece el fondo amarillo */
+        }
+
+        /* Familia de fuentes */
+        h1 {
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, sans-serif;
+            /* Establece la fuente Arial, con una alternativa sans-serif */
+        }
+
+        /* Tamaño de fuente */
+        p {
+            font-size: 20px;
+            /* Establece el tamaño del texto a 16 píxeles */
+        }
+
+        /* Margen */
+        .contenedor {
+            margin: 20px;
+            /* Establece un margen de 30 píxeles alrededor del contenedor */
+        }
+
+        /* Relleno */
+        .caja {
+            padding: 60px;
+            /* Establece un relleno de 60 píxeles dentro de la caja */
+        }
+
+        /* Borde */
+        .caja {
+            border: 2px solid rgb(11, 230, 238);
+            /* Establece un borde sólido de 2 píxeles de color negro */
+        }
+    </style>
+</head>
+
+<body>
+    <div class="contenedor">
+        <h1>Ejemplo de CSS</h1>
+        <p>Este es un párrafo con texto azul y tamaño de fuente de 16 píxeles.</p>
+        <div class="caja">
+            <p>Esta es una caja con fondo amarillo, relleno de 15 píxeles y borde negro de 2 píxeles.</p>
+        </div>
+    </div>
+</body>
+
+</html>
         <h1>aprendiendo</h1>
         <h2> Convencido</h2>
         <H6>A ver</H6>
